@@ -5,7 +5,6 @@ import java.util.Set;
 import java.util.function.Function;
 
 import no.nav.melosys.domain.kodeverk.Sakstyper;
-import no.nav.melosys.domain.kodeverk.Vedtakstyper;
 import no.nav.melosys.service.validering.Kontrollfeil;
 
 class VedtakKontrollFactory {
@@ -13,33 +12,29 @@ class VedtakKontrollFactory {
     private VedtakKontrollFactory() {
     }
 
-    static Set<Function<VedtakKontrollData, Kontrollfeil>> hentKontrollerForVedtakstype(Vedtakstyper vedtakstype, Sakstyper sakstype) {
-        return switch (vedtakstype) {
-            case FØRSTEGANGSVEDTAK, OMGJØRINGSVEDTAK, KORRIGERT_VEDTAK -> vedtakKontroller(sakstype);
-            default -> throw new UnsupportedOperationException("Kan ikke hente kontroller for vedtakstype " + vedtakstype);
-        };
-    }
+    private static final Set<Function<VedtakKontrollData, Kontrollfeil>> KONTROLLER_EU_EOS = Set.of(
+        VedtakKontroller::adresseRegistrert,
+        VedtakKontroller::overlappendeMedlemsperiode,
+        VedtakKontroller::periodeOver24Mnd,
+        VedtakKontroller::periodeManglerSluttdato,
+        VedtakKontroller::arbeidsstedManglerFelter,
+        VedtakKontroller::foretakUtlandManglerFelter
+    );
 
-    private static Set<Function<VedtakKontrollData, Kontrollfeil>> vedtakKontroller(Sakstyper sakstype) {
+    private static final Set<Function<VedtakKontrollData, Kontrollfeil>> KONTROLLER_TRYGDEAVTALER = Set.of(
+        VedtakKontroller::adresseRegistrert,
+        VedtakKontroller::overlappendeMedlemsperiode,
+        VedtakKontroller::periodeOverTreÅr,
+        VedtakKontroller::periodeManglerSluttdato,
+        VedtakKontroller::arbeidsstedManglerFelter,
+        VedtakKontroller::representantIUtlandetMangler
+    );
+
+    static Set<Function<VedtakKontrollData, Kontrollfeil>> hentKontrollerForVedtak(Sakstyper sakstype) {
         return switch (sakstype) {
-            case EU_EOS -> Set.of(
-                VedtakKontroller::adresseRegistrert,
-                VedtakKontroller::overlappendeMedlemsperiode,
-                VedtakKontroller::periodeOver24Mnd,
-                VedtakKontroller::periodeManglerSluttdato,
-                VedtakKontroller::arbeidsstedManglerFelter,
-                VedtakKontroller::foretakUtlandManglerFelter
-            );
-            case TRYGDEAVTALE -> Set.of(
-                VedtakKontroller::adresseRegistrert,
-                VedtakKontroller::overlappendeMedlemsperiode,
-                VedtakKontroller::periodeManglerSluttdato,
-                VedtakKontroller::periodeOverTreÅr,
-                VedtakKontroller::arbeidsstedManglerFelter,
-                VedtakKontroller::representantIUtlandetMangler
-            );
-            default -> Collections.emptySet();
+            case EU_EOS -> KONTROLLER_EU_EOS;
+            case FTRL -> Collections.emptySet();
+            case TRYGDEAVTALE -> KONTROLLER_TRYGDEAVTALER;
         };
-
     }
 }
